# gxter

./: .gitignore  Cargo.toml  LICENSES.html  README.md  sa_ru_tycoon.txt  vc_ru_tycoon.txt
character_tables/: sa_ru_tycoon.toml  vc_ru_tycoon.toml
gxter-cli/: Cargo.toml  README.md
gxter-cli/src/: main.rs
src/: gxt.rs  gxt_pretty.rs  lib.rs  main.rs
test_files/: gta3.gxt  gta3.txt  gta3_key_starts_with_hash.gxt  gtasa.gxt  gtasa.txt  gtasa_hashtest.gxt  gtasa_ru.txt  gtavc.gxt  gtavc.txt  gtavc_ru.txt
