[package]
name = "gxter"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
getopts = "0.2"
indexmap = {version = "2.12.1", features = ["serde"]}
toml = {version = "0.9.8", features = ["preserve_order"]}
serde = {version = "1.0.228", features = ["derive"]}
thiserror = "2.0.17"
hex = "0.4.3"
crc32_light = "0.1.2"
anstream = "0.6.21"
owo-colors = "4.2.3"
