[package]
name = "gxter-cli"
version = "0.1.1"
edition = "2024"
license = "MIT or Apache-2.0"
description = "A command-line utility creating and reading GTA 3/VC/SA GXT (text string) files"
readme = "README.md"
repository = "https://github.com/slashdevslashurandom/gxter"
keywords = ["gta", "gaming", "localization", "modding", "gxt"]

[dependencies]
gxter = { version = "0.1.0", path = "../" }
getopts = { version = "0.2" }
indexmap = {version = "2.12.1"}
anstream = { version = "0.6.21", optional = true }
owo-colors = { version = "4.2.3", optional = true }

[features]
pretty = ["dep:anstream", "dep:owo-colors"]
